# proxy-wasm-cpp-host

./: .bazelrc  BAZEL_S390X_NOTES.md  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
.bcr/: README.md  metadata.template.json  presubmit.yml  source.template.json
.github/: dependabot.yml
.github/workflows/: publish-build-tools.yml  publish-to-bcr.yml  test.yml
bazel/: BUILD  dependencies.bzl  dependencies_import.bzl  non_module_deps.bzl  repositories.bzl  select.bzl  setup_features.bzl  setup_protobuf_deps.bzl  v8_transition.bzl  wasm.bzl  wasmedge_repository.bzl
bazel/cargo/wasmsign/: Cargo.toml
bazel/cargo/wasmtime/: Cargo.toml  README.md  vendor_and_patch.sh
bazel/cargo/wasmtime/remote/: BUILD.cranelift-assembler-x64-0.127.2.bazel  BUILD.cranelift-assembler-x64-meta-0.127.2.bazel  BUILD.cranelift-bforest-0.127.2.bazel  BUILD.cranelift-bitset-0.127.2.bazel  BUILD.cranelift-codegen-0.127.2.bazel  BUILD.cranelift-codegen-meta-0.127.2.bazel  BUILD.cranelift-codegen-shared-0.127.2.bazel  BUILD.cranelift-control-0.127.2.bazel  BUILD.cranelift-entity-0.127.2.bazel  BUILD.cranelift-frontend-0.127.2.bazel  BUILD.cranelift-isle-0.127.2.bazel  BUILD.cranelift-native-0.127.2.bazel  BUILD.cranelift-srcgen-0.127.2.bazel  BUILD.pulley-interpreter-40.0.2.bazel  BUILD.pulley-macros-40.0.2.bazel  BUILD.wasmtime-40.0.2.bazel  BUILD.wasmtime-c-api-impl-40.0.2.bazel  BUILD.wasmtime-environ-40.0.2.bazel  BUILD.wasmtime-internal-c-api-macros-40.0.2.bazel  BUILD.wasmtime-internal-component-macro-40.0.2.bazel  BUILD.wasmtime-internal-component-util-40.0.2.bazel  BUILD.wasmtime-internal-cranelift-40.0.2.bazel  BUILD.wasmtime-internal-fiber-40.0.2.bazel  BUILD.wasmtime-internal-jit-debug-40.0.2.bazel  BUILD.wasmtime-internal-jit-icache-coherence-40.0.2.bazel  BUILD.wasmtime-internal-math-40.0.2.bazel  BUILD.wasmtime-internal-slab-40.0.2.bazel  BUILD.wasmtime-internal-unwinder-40.0.2.bazel  BUILD.wasmtime-internal-versioned-export-macros-40.0.2.bazel  BUILD.wasmtime-internal-winch-40.0.2.bazel  BUILD.wasmtime-internal-wit-bindgen-40.0.2.bazel  BUILD.wasmtime-wasi-40.0.2.bazel  BUILD.wasmtime-wasi-io-40.0.2.bazel  BUILD.wiggle-40.0.2.bazel  BUILD.wiggle-generate-40.0.2.bazel  BUILD.wiggle-macro-40.0.2.bazel  BUILD.winch-codegen-40.0.2.bazel
include/proxy-wasm/: v8.h
src/: hash.cc  signature_util.cc
src/v8/: v8.cc
src/wasmedge/: wasmedge.cc
src/wasmtime/: types.h  wasmtime.cc
test/: BUILD  runtime_test.cc  v8_options_test.cc  wasm_vm_test.cc
test/fuzz/: BUILD
test/test_data/: trap.rs
tools/lint/: BUILD  linters.bzl
