# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod MODULE.bazel for proxy-wasm-cpp-host.

This file enables Bzlmod support while the legacy WORKSPACE file is retained
for backward compatibility with downstream users that have not yet migrated.

Usage:
  - Bzlmod builds: bazel build --enable_bzlmod //...
  - Legacy builds: bazel build --noenable_bzlmod //...  (or use .bazelrc)
"""

module(
    name = "proxy-wasm-cpp-host",
    version = "0.0.0",
    compatibility_level = 1,
)

# ─── Bazel infrastructure ────────────────────────────────────────────────────

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.0")
bazel_dep(name = "bazel_features", version = "1.33.0")
bazel_dep(name = "rules_cc", version = "0.1.5")

# ─── Build toolchain rules ───────────────────────────────────────────────────

bazel_dep(name = "toolchains_llvm", version = "1.4.0")
bazel_dep(name = "rules_python", version = "1.6.1")
bazel_dep(name = "rules_rust", version = "0.69.0")

# ─── Build utilities ─────────────────────────────────────────────────────────

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_fuzzing", version = "0.6.0")
bazel_dep(name = "bazel_lib", version = "3.0.1")
bazel_dep(name = "aspect_rules_lint", version = "1.12.0")
bazel_dep(name = "aspect_rules_js", version = "2.1.2")

# ─── Core C++ dependencies ───────────────────────────────────────────────────

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "protobuf", version = "33.2")

# ─── V8 dependencies (available in BCR) ──────────────────────────────────────

bazel_dep(name = "highway", version = "1.2.0")

# ─── WasmEdge dependencies (available in BCR) ────────────────────────────────

bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "spdlog", version = "1.13.0")

# ─── Python toolchain configuration ──────────────────────────────────────────

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)
use_repo(python, "python_3_11", "pythons_hub")
register_toolchains("@pythons_hub//:all")

# ─── LLVM toolchain configuration ────────────────────────────────────────────

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.0",
    sha256 = {
        "linux-x86_64": "cee77d641690466a193d9b88c89705de1c02bbad46bde6a3b126793c0a0f2923",
        "linux-aarch64": "7bb54afd330fe1a1c2d4c593fa1e2dbe2abd9bf34fb3597994ff41e443cf144b",
        "darwin-aarch64": "9da86f64a99f5ce9b679caf54e938736ca269c5e069d0c94ad08b995c5f25c16",
        "darwin-x86_64": "264f2f1e8b67f066749349ae8b4943d346cd44e099464164ef21b42a57663540",
    },
    strip_prefix = {
        "linux-x86_64": "LLVM-19.1.0-Linux-X64",
        "linux-aarch64": "clang+llvm-19.1.0-aarch64-linux-gnu",
        "darwin-aarch64": "LLVM-19.1.0-macOS-ARM64",
        "darwin-x86_64": "LLVM-19.1.0-macOS-X64",
    },
    urls = {
        "linux-x86_64": ["https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.0/LLVM-19.1.0-Linux-X64.tar.xz"],
        "linux-aarch64": ["https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.0/clang+llvm-19.1.0-aarch64-linux-gnu.tar.xz"],
        "darwin-aarch64": ["https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.0/LLVM-19.1.0-macOS-ARM64.tar.xz"],
        "darwin-x86_64": ["https://github.com/llvm/llvm-project/releases/download/llvmorg-19.1.0/LLVM-19.1.0-macOS-X64.tar.xz"],
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain//:all")

# ─── Rust toolchain configuration ────────────────────────────────────────────

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.93.1"],
    extra_target_triples = [
        "aarch64-unknown-linux-gnu",
        "wasm32-unknown-unknown",
        "wasm32-wasip1",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Additional Rust repository sets for s390x cross-compilation are configured
# in WORKSPACE.bzlmod via rust_repository_set() calls.

# ─── Non-module dependencies ─────────────────────────────────────────────────
# These are dependencies not available in the Bazel Central Registry (BCR)
# or that require custom BUILD files and/or patches.

non_module_deps = use_extension("//bazel:non_module_deps.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "boringssl",
    "proxy_wasm_cpp_sdk",
    "bazel_compdb",
    "envoy_toolshed",
    "v8",
    "fast_float",
    "dragonbox",
    "fp16",
    "simdutf",
    "intel_ittapi",
    "com_github_bytecodealliance_wasm_micro_runtime",
    "llvm-raw",
    "llvm_zlib",
    "llvm_zstd",
    "com_github_wasmedge_wasmedge",
    "com_github_bytecodealliance_wasmtime",
)
